fix arrow and z-index on nav2, and fix image not showing in promoBanner

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
   align-items: center;
   color: white;
   margin-left: 10px;
+  font-size: 20px;
 }
 
 .back-arrow:hover {
@@ -13,8 +14,8 @@
 .nav2 {
   height: 3rem;
   display: flex;
-  position: relative;
   position: fixed;
+  z-index: 1;
   background: #3c2f2f;
   width: 100%;
   border-bottom: 1px solid grey
